--- a/css/styles.css
+++ b/css/styles.css
@@ -6,14 +6,14 @@ body {
 }
 
 h1 {
-  color: #66BFBF;
+  color: #000000;
   font-size: 5.625rem;
   margin: 50px auto 0 auto;
   font-family: , cursive;
 }
 
 h2 {
-  color: #66BFBF;
+  color: #FFFFFF;
   font-family: 'Montserrat', sans-serif;
   font-size: 2.5rem;
   font-weight: normal;
@@ -21,12 +21,12 @@ h2 {
 }
 
 h3 {
-  color: #11999E;
+  color: #FFFFFF;
   font-family: 'Montserrat', sans-serif;
 }
 
 h4 {
-  color: #black;
+  color: #FFFFFF;
   font-family: 'Montserrat', sans-serif;
   text-align: center;
   font-size: 1.4rem;
@@ -34,6 +34,7 @@ h4 {
 
 p {
   line-height: 2;
+  color: #ffffff;
 }
 
 hr {
@@ -44,7 +45,7 @@ hr {
 }
 
 a{
-  color: #11999E;
+  color: #9da09e;
   font-family: 'Montserrat', sans-serif;
   margin: 10px 20px;
   text-decoration: none;
@@ -62,7 +63,7 @@ a:hover {
 }
 
 .top-container {
-  background-color: #E4F9F5;
+  background-color: #FFFFFF;
   position: relative;
   padding-top: 100px;
 }
@@ -72,7 +73,7 @@ a:hover {
 }
 
 .bottom-container {
-  background-color: #66BFBF;
+  background-color: #000000;
   padding: 50px 0 20px;
 }
 
@@ -115,6 +116,13 @@ a:hover {
 }
 
 .data-img {
+  width: 40%;
+  height: 100%;
+  float: left;
+  margin-right: 30px;
+}
+
+.mario-img {
   width: 40%;
   height: 100%;
   float: left;
@@ -166,4 +174,85 @@ a:hover {
   background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
   background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
   text-decoration: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+body {
+    background-color: black;
+}
+
+.main {
+  background-color: white;
+  margin-top: 110px;
+  padding-left: 100px;
+  min-width: 1200px;
+}
+
+.ryu {
+    float: left;
+}
+
+.ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool, .easteregg {
+  width: 659px;
+  height: 494px;
+}
+
+.ryu-ready, .ryu-throwing, .ryu-cool, .easteregg {
+  display: none;
+}
+
+.ryu-ready {
+  background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/145077/ryu-ready-position.gif');
+}
+
+.ryu-still {
+  background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/145077/ryu-standing-still.png');
+}
+
+.ryu-throwing {
+  background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/145077/ryu-throwing-hadouken.png');
+}
+
+.ryu-cool {
+    background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/145077/ryu-cool.gif');
+}
+
+.easteregg {
+    margin-left: 80%;
+    margin-top: -78%;
+    background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/145077/easteregg.gif');
+}
+
+.hadouken, .ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool, .easteregg {
+  background-repeat: no-repeat;
+}
+
+.hadouken {
+  background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/145077/hadouken.gif');
+  width: 156px;
+  height: 90px;
+  display: none;
+  position: relative;
+  top: 167px;
+  left: -212px;
+  float: left;
+}
+
+.instructions {
+    font-family: 'Ceviche One', cursive;
+    font-size: 45px;
+    color: lightgray;
+    text-align: right;
+    margin-top: 2%;
+    margin-right: 5%;
+    margin-bottom: 2%;
 }
